// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
[
  "7bfc1a19a40b6a44e54b1db9fa3ac575840a20aab7a5a54736699b688f6314deec492447370f6b7a96c859d0ba99d10ffe2d2fb0a9f1909453829e78762fcd0b",
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
[
  "7bfc1a19a40b6a44e54b1db9fa3ac575840a20aab7a5a54736699b688f6314deec492447370f6b7a96c859d0ba99d10ffe2d2fb0a9f1909453829e78762fcd0b",
  "",
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
[
  "e9b413b184fa96509de33a62c036505fa692cb9cd1446ceb3218abd7c23611bbe7d59c9e1e130d30a68ef4bbac27b419428e9d271d962ae6816c3aa2bc1a040e",
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
[
  "7bfc1a19a40b6a44e54b1db9fa3ac575840a20aab7a5a54736699b688f6314deec492447370f6b7a96c859d0ba99d10ffe2d2fb0a9f1909453829e78762fcd0b",
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
{
  "command": "transfer",
  "fee": 10000000n,
  "id": {
    "data": [
      116,
      198,
      128,
      147,
      238,
      181,
      55,
      166,
      114,
      181,
      57,
      160,
      183,
      70,
      212,
      192,
      169,
      102,
      248,
      94,
      221,
      18,
      148,
      116,
      213,
      248,
      112,
      41,
      174,
      250,
      16,
      185,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 54n,
  "params": {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": {
      "data": [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": {
    "data": [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": [
    {
      "data": [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
{
  "command": "transfer",
  "fee": 10000000n,
  "id": {
    "data": [
      116,
      198,
      128,
      147,
      238,
      181,
      55,
      166,
      114,
      181,
      57,
      160,
      183,
      70,
      212,
      192,
      169,
      102,
      248,
      94,
      221,
      18,
      148,
      116,
      213,
      248,
      112,
      41,
      174,
      250,
      16,
      185,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 54n,
  "params": {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": {
      "data": [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": {
    "data": [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": [
    {
      "data": [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
[
  "7bfc1a19a40b6a44e54b1db9fa3ac575840a20aab7a5a54736699b688f6314deec492447370f6b7a96c859d0ba99d10ffe2d2fb0a9f1909453829e78762fcd0b",
  "b4fc541a7a1c9935f040bb5b9fe69e56bf1cbd2c0b9e3857983f4510b0b3514ed8510417aa75fad4ac66cc91a51aadd8f8e504f3042b5a932b0c9b8c62fd410d",
]
`;
